# askmydocs

./: .gitignore  README.md  render.yaml  requirements.txt
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt  start_backend.ps1
backend/middleware/: auth_middleware.py
backend/models/: database.py  schemas.py
backend/routers/: auth.py  chats.py  documents.py
backend/services/: document_index.py  document_qa.py  firebase_auth.py  gemini_service.py  jwt_handler.py  storage.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/app/: page.js
frontend/app/app/chats/: page.js
frontend/app/app/documents/: page.js
frontend/app/app/settings/: page.js
frontend/components/: DocxPreview.js
frontend/lib/: api.js  avatar.js  firebase.js  session.js  theme.js
